--- a/index.html
+++ b/index.html
@@ -4,34 +4,38 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 
     <div id="formularz">
-        <form action="https://formspree.io/rafalkastory@gmail.com"
-      method="POST">
+        <form action="https://formspree.io/rafalkastory@gmail.com" method="POST">
             <label for="name">Imię:</label>
             <input type="text" name="name" id="name"><br>
-            <p></p>
+            <br>
             <label for="surname">Nazwisko:</label>
             <input type="text" name="surname" id="surname"><br>
-            <p></p>
+            <br>
+            
             <label for="name">e-mail:</label>
             <input type="email" name="email">
-            <p></p>
+            <br>
+            
             <label for="name">telefon:</label>
             <input type="tel" name="tel"><br>
-            <p></p>
-            <label for="name">miasto:</label>
-            <input type="checkbox" name="miasto1" value="Krakow">Kraków
-            <input type="checkbox" name="miasto2" value="Warszawa">Warszawa
-            <input type="checkbox" name="miasto3" value="Gdansk">Gdańsk<br>
-            <p></p>        
-            <label for="name">płeć:</label>
+            <br>
+
+            <label for="name">wybierz miasto:</label>
+            <select name="city" id="city">
+                <option value="Krakow">Kraków</option>
+                <option value="Warszawa">Warszawa</option>
+                <option value="Gdansk">Gdańsk</option>   
+                          </select>
+                          <br>
+            <label for="name">wybierz płeć:</label>
             <input type="radio" name="gender" value="male" checked>mężczyzna
             <input type="radio" name="gender" value="female">kobieta
-            <input type="radio" name="gender" value="other">inne<br>
             <p></p>
             <label><input type="checkbox">Wyrażam zgodę na przetwarzanie moich danych osobowych</label><br>
             <p></p>            
