--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <br>
             
             <label for="name">e-mail:</label>
-            <input type="email" name="email">
+            <input type="email" name="email"><br>
             <br>
             
             <label for="name">telefon:</label>
